syntax = "proto3";

import public "common/common.proto";

package builder;

message BuildComponentRequest {
  common.Target target = 1;
  common.ContentType content_type = 2;
  string source_code = 3;
}

message BuildComponentResponse { string id = 1; }

message ReadComponentRequest { string id = 1; }

message ReadComponentResponse { bytes component = 1; }

message BundleSourceCodeRequest {
  common.ContentType content_type = 1;
  string source_code = 2;
}

message BundleSourceCodeResponse { string bundled_source_code = 1; }

service Builder {
  rpc BuildComponent(BuildComponentRequest) returns (BuildComponentResponse) {}

  rpc ReadComponent(ReadComponentRequest) returns (ReadComponentResponse) {}

  rpc BundleSourceCode(BundleSourceCodeRequest)
      returns (BundleSourceCodeResponse) {}
}